fix render headlines news block, add getting search query

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 				<div class="header-menu">
 					<ul class="header-menu__items">
 						<li class="header-menu__item header-menu__item-logo logo"></li>
-						<li class="header-menu__item header-menu__item-search">
-							<input type="search" class="header-menu__item-input-search menu-line-style"
-								placeholder="Я хочу узнать про...">
-							<button type="submit"
-								class="header-menu__item-input-search header-menu__item-input-search_button"></button>
-						</li>
+						<form>
+							<li class="header-menu__item header-menu__item-search">
+								<input type="search" class="header-menu__item-input-search menu-line-style"
+									placeholder="Я хочу узнать про...">
+								<button type="submit"
+									class="header-menu__item-input-search header-menu__item-input-search_button"></button>
+							</li>
+						</form>
 						<li class="header-menu__item header-menu__item-lang">
 							<select class="header-menu__item-lang menu-line-style">
 								<option class="header-menu__item-lang-value" value="ru">Россия</option>
@@ -50,7 +52,7 @@
 
 		<div class="page">
 			<main>
-				<div class="news-block__query">
+				<div class="news-block query">
 					<!--
 				<div class="news-block__card">
 					<div class="news-block__card-item card-img"></div>
@@ -90,7 +92,7 @@
 
 	<div class="page">
 		<main>
-			<div class="news-block">
+			<div class="news-block headlines">
 				<!--
 				<div class="news-block__card">
 					<div class="news-block__card-item card-img"></div>
