--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<input type="search" class="header-menu__item-input-search menu-line-style"
 									placeholder="Я хочу узнать про...">
 								<button type="submit"
-									class="header-menu__item-input-search header-menu__item-input-search_button"></button>
+									class="header-menu__search-button"></button>
 							</li>
 						</form>
 						<li class="header-menu__item header-menu__item-lang">
@@ -44,7 +44,7 @@
 
 		<div class="page">
 			<div class="title-block">
-				<h2 class="main-title">По вашему запросу “” найдено 8 результатов</h2>
+				<h2 class="main-title main-title__query">По вашему запросу “” найдено 8 результатов</h2>
 			</div>
 		</div>
 
